Moved some code from v1 codebase to v2. Created new services for v2 and tests for them.